add some tayps can next list

--- a/templates/about-us.html
+++ b/templates/about-us.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 {% block title %}About Us{% endblock %}
 {% block body_id %}about-us{% endblock %}
-{% block content %}
+{% block contend %}
    <div class="main-content">
 			<div id="wrapper-site">
 				<div id="content-wrapper">
@@ -36,8 +36,7 @@
 									<div class="row">
 										<div class="col-lg-6 col-md-6 col-sm-6 right">
 											<a href="#">
-												<img class="img-fluid" src="{% static 'img/other/1.jpg'%}
-" alt="#" />
+												<img class="img-fluid" src="{% static 'img/other/1.jpg'%}" alt="#" />
 											</a>
 										</div>
 										<div class="col-lg-6 col-md-6 col-sm-6 left">
@@ -51,8 +50,7 @@
 													sed odio sit amet nibh vultate cursus a sit amet mauris. Duis sed odio sit
 												amet nibh vultate cursus a sit amet mauris.</p>
 												<a>
-													<img class="img-fluid" src="{% static 'img/other/4.png'%}
-" alt="#" />
+													<img class="img-fluid" src="{% static 'img/other/4.png'%}" alt="#" />
 													<span>Mr. kwang shang - CEO</span>
 												</a>
 											</div>
@@ -71,14 +69,12 @@
 										</div>
 										<div class="col-lg-6 col-md-6 col-sm-6 left">
 											<a href="#">
-												<img class="img-fluid" src="{% static 'img/other/2.jpg'%}
-" alt="#" />
+												<img class="img-fluid" src="{% static 'img/other/2.jpg'%}" alt="#" />
 											</a>
 										</div>
 										<div class="col-lg-6 col-md-6 col-sm-6 right">
 											<a href="#">
-												<img class="img-fluid" src="{% static 'img/other/3.jpg'%}
-" alt="#" />
+												<img class="img-fluid" src="{% static 'img/other/3.jpg'%}" alt="#" />
 											</a>
 										</div>
 										<div class="col-lg-6 col-md-6 col-sm-6 left">
