--- a/templates/blog-list.html
+++ b/templates/blog-list.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 {% block title %}Blog List{% endblock %}
 {% block body_id %}blog-list-sidebar-left{% endblock %}
-{% block content %}
+{% block contend %}
    <div class="main-content">
         <div id="wrapper-site">
             <div id="content-wrapper">
@@ -285,8 +285,7 @@
                                         <div class="sidebar-block group-image-special">
                                             <div class="effect">
                                                 <a href="#">
-                                                    <img class="img-fluid" src="{% static 'img/blog/advertising.jpg'%}
-" alt="banner-2" title="banner-2">
+                                                    <img class="img-fluid" src="{% static 'img/blog/advertising.jpg'%}" alt="banner-2" title="banner-2">
                                                 </a>
                                             </div>
                                         </div>
@@ -297,8 +296,7 @@
                                         <div class="list-content row">
                                             <div class="hover-after col-md-5 col-xs-12">
                                                 <a href="blog-detail.html">
-                                                    <img src="{% static 'img/blog/4.jpg'%}
-" alt="img">
+                                                    <img src="{% static 'img/blog/4.jpg'%}" alt="img">
                                                 </a>
                                             </div>
                                             <div class="late-item col-md-7 col-xs-12">
@@ -322,8 +320,7 @@
                                         <div class="list-content row">
                                             <div class="hover-after col-md-5 col-xs-12">
                                                 <a href="blog-detail.html">
-                                                    <img src="{% static 'img/blog/5.jpg'%}
-" alt="img">
+                                                    <img src="{% static 'img/blog/5.jpg'%}" alt="img">
                                                 </a>
                                             </div>
                                             <div class="late-item col-md-7 col-xs-12">
@@ -347,8 +344,7 @@
                                         <div class="list-content row">
                                             <div class="hover-after col-md-5 col-xs-12">
                                                 <a href="blog-detail.html">
-                                                    <img src="{% static 'img/blog/6.jpg'%}
-" alt="img">
+                                                    <img src="{% static 'img/blog/6.jpg'%}" alt="img">
                                                 </a>
                                             </div>
                                             <div class="late-item  col-md-7 col-xs-12">
@@ -372,8 +368,7 @@
                                         <div class="list-content row">
                                             <div class="hover-after col-md-5 col-xs-12">
                                                 <a href="blog-detail.html">
-                                                    <img src="{% static 'img/blog/7.jpg'%}
-" alt="img">
+                                                    <img src="{% static 'img/blog/7.jpg'%}" alt="img">
                                                 </a>
                                             </div>
                                             <div class="late-item col-md-7 col-xs-12">
@@ -397,8 +392,7 @@
                                         <div class="list-content row">
                                             <div class="hover-after col-md-5 col-xs-12">
                                                 <a href="blog-detail.html">
-                                                    <img src="{% static 'img/blog/8.jpg'%}
-" alt="img">
+                                                    <img src="{% static 'img/blog/8.jpg'%}" alt="img">
                                                 </a>
                                             </div>
                                             <div class="late-item col-md-7 col-xs-12">
@@ -422,8 +416,7 @@
                                         <div class="list-content row">
                                             <div class="hover-after col-md-5 col-xs-12">
                                                 <a href="blog-detail.html">
-                                                    <img src="{% static 'img/blog/9.jpg'%}
-" alt="img">
+                                                    <img src="{% static 'img/blog/9.jpg'%}" alt="img">
                                                 </a>
                                             </div>
                                             <div class="late-item  col-md-7 col-xs-12">
