--- a/templates/product-cart.html
+++ b/templates/product-cart.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 {% block title %}Cart{% endblock %}
 {% block body_id %}cart{% endblock %}
-{% block content %}
+{% block contend %}
    <div class="main-content" id="cart">
         <!-- main -->
         <div id="wrapper-site">
