--- a/templates/product-checkout.html
+++ b/templates/product-checkout.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 {% block title %}Checkout{% endblock %}
 {% block body_id %}checkout{% endblock %}
-{% block content %}
+{% block contend %}
   <div id="checkout" class="main-content">
         <div class="wrap-banner">
             <!-- breadcrumb -->
