--- a/templates/product-detail.html
+++ b/templates/product-detail.html
@@ -4,7 +4,7 @@
 {% load i18n %}
 {% block title %}ProductDetail{% endblock %}
 {% block body_id %}product-detail{% endblock %}
-{% block content %}
+{% block contend %}
   <div class="main-content">
         <div id="wrapper-site">
             <div id="content-wrapper">
@@ -194,8 +194,8 @@
                                                         <div class="product-miniature item-one first-item d-flex">
                                                             <div class="thumbnail-container border">
                                                                 <a href="product-detail.html">
-                                                                    <img class="img-fluid image-cover" src="img/product/1.jpg" alt="img">
-                                                                    <img class="img-fluid image-secondary" src="img/product/22.jpg" alt="img">
+                                                                    <img class="img-fluid image-cover" src="{% static 'img/product/1.jpg' %}" alt="img">
+                                                                    <img class="img-fluid image-secondary" src="{% static 'img/product/22.jpg' %}" alt="img">
                                                                 </a>
                                                             </div>
                                                             <div class="product-description">
@@ -225,8 +225,8 @@
                                                         <div class="product-miniature item-one first-item d-flex">
                                                             <div class="thumbnail-container border">
                                                                 <a href="product-detail.html">
-                                                                    <img class="img-fluid image-cover" src="img/product/2.jpg" alt="img">
-                                                                    <img class="img-fluid image-secondary" src="img/product/11.jpg" alt="img">
+                                                                    <img class="img-fluid image-cover" src="{% static 'img/product/2.jpg' %}" alt="img">
+                                                                    <img class="img-fluid image-secondary" src="{% static 'img/product/11.jpg' %}" alt="img">
                                                                 </a>
                                                             </div>
                                                             <div class="product-description">
@@ -256,8 +256,8 @@
                                                         <div class="product-miniature item-one first-item d-flex">
                                                             <div class="thumbnail-container border">
                                                                 <a href="product-detail.html">
-                                                                    <img class="img-fluid image-cover" src="img/product/3.jpg" alt="img">
-                                                                    <img class="img-fluid image-secondary" src="img/product/14.jpg" alt="img">
+                                                                    <img class="img-fluid image-cover" src="{% static 'img/product/3.jpg' %}" alt="img">
+                                                                    <img class="img-fluid image-secondary" src="{% static 'img/product/14.jpg' %}" alt="img">
                                                                 </a>
                                                             </div>
                                                             <div class="product-description">
@@ -351,16 +351,16 @@
                                                         <div class="images-container">
                                                             <div class="js-qv-mask mask tab-content border">
                                                                 <div id="item1" class="tab-pane fade active in show">
-                                                                    <img src="img/product/1.jpg" alt="img">
+                                                                    <img src="{% static 'img/product/1.jpg' %}" alt="img">
                                                                 </div>
                                                                 <div id="item2" class="tab-pane fade">
-                                                                    <img src="img/product/2.jpg" alt="img">
+                                                                    <img src="{% static 'img/product/2.jpg' %}" alt="img">
                                                                 </div>
                                                                 <div id="item3" class="tab-pane fade">
-                                                                    <img src="img/product/3.jpg" alt="img">
+                                                                    <img src="{% static 'img/product/3.jpg' %}" alt="img">
                                                                 </div>
                                                                 <div id="item4" class="tab-pane fade">
-                                                                    <img src="img/product/5.jpg" alt="img">
+                                                                    <img src="{% static 'img/product/5.jpg' %}" alt="img">
                                                                 </div>
                                                                 <div class="layer hidden-sm-down" data-toggle="modal" data-target="#product-modal">
                                                                     <i class="fa fa-expand"></i>
@@ -369,22 +369,22 @@
                                                             <ul class="product-tab nav nav-tabs d-flex">
                                                                 <li class="active col">
                                                                     <a href="#item1" data-toggle="tab" aria-expanded="true" class="active show">
-                                                                        <img src="img/product/1.jpg" alt="img">
+                                                                        <img src="{% static 'img/product/1.jpg' %}" alt="img">
                                                                     </a>
                                                                 </li>
                                                                 <li class="col">
                                                                     <a href="#item2" data-toggle="tab">
-                                                                        <img src="img/product/2.jpg" alt="img">
+                                                                        <img src="{% static 'img/product/2.jpg' %}" alt="img">
                                                                     </a>
                                                                 </li>
                                                                 <li class="col">
                                                                     <a href="#item3" data-toggle="tab">
-                                                                        <img src="img/product/3.jpg" alt="img">
+                                                                        <img src="{% static 'img/product/3.jpg' %}" alt="img">
                                                                     </a>
                                                                 </li>
                                                                 <li class="col">
                                                                     <a href="#item4" data-toggle="tab">
-                                                                        <img src="img/product/5.jpg" alt="img">
+                                                                        <img src="{% static 'img/product/5.jpg' %}" alt="img">
                                                                     </a>
                                                                 </li>
                                                             </ul>
@@ -400,37 +400,37 @@
                                                                                         <div class="images-container">
                                                                                             <div class="js-qv-mask mask tab-content">
                                                                                                 <div id="modal-item1" class="tab-pane fade active in show">
-                                                                                                    <img src="img/product/1.jpg" alt="img">
+                                                                                                    <img src="{% static 'img/product/1.jpg' %}" alt="img">
                                                                                                 </div>
                                                                                                 <div id="modal-item2" class="tab-pane fade">
-                                                                                                    <img src="img/product/2.jpg" alt="img">
+                                                                                                    <img src="{% static 'img/product/2.jpg' %}" alt="img">
                                                                                                 </div>
                                                                                                 <div id="modal-item3" class="tab-pane fade">
-                                                                                                    <img src="img/product/3.jpg" alt="img">
+                                                                                                    <img src="{% static 'img/product/3.jpg' %}" alt="img">
                                                                                                 </div>
                                                                                                 <div id="modal-item4" class="tab-pane fade">
-                                                                                                    <img src="img/product/5.jpg" alt="img">
+                                                                                                    <img src="{% static 'img/product/5.jpg' %}" alt="img">
                                                                                                 </div>
                                                                                             </div>
                                                                                             <ul class="product-tab nav nav-tabs">
                                                                                                 <li class="active">
                                                                                                     <a href="#modal-item1" data-toggle="tab" class=" active show">
-                                                                                                        <img src="img/product/1.jpg" alt="img">
+                                                                                                        <img src="{% static 'img/product/1.jpg' %}" alt="img">
                                                                                                     </a>
                                                                                                 </li>
                                                                                                 <li>
                                                                                                     <a href="#modal-item2" data-toggle="tab">
-                                                                                                        <img src="img/product/2.jpg" alt="img">
+                                                                                                        <img src="{% static 'img/product/2.jpg' %}" alt="img">
                                                                                                     </a>
                                                                                                 </li>
                                                                                                 <li>
                                                                                                     <a href="#modal-item3" data-toggle="tab">
-                                                                                                        <img src="img/product/3.jpg" alt="img">
+                                                                                                        <img src="{% static 'img/product/3.jpg' %}" alt="img">
                                                                                                     </a>
                                                                                                 </li>
                                                                                                 <li>
                                                                                                     <a href="#modal-item4" data-toggle="tab">
-                                                                                                        <img src="img/product/5.jpg" alt="img">
+                                                                                                        <img src="{% static 'img/product/5.jpg' %}" alt="img">
                                                                                                     </a>
                                                                                                 </li>
                                                                                             </ul>
@@ -733,8 +733,8 @@
                                                             <div class="product-miniature js-product-miniature item-one first-item">
                                                                 <div class="thumbnail-container border border">
                                                                     <a href="product-detail.html">
-                                                                        <img class="img-fluid image-cover" src="img/product/1.jpg" alt="img">
-                                                                        <img class="img-fluid image-secondary" src="img/product/22.jpg" alt="img">
+                                                                        <img class="img-fluid image-cover" src="{% static 'img/product/1.jpg' %}" alt="img">
+                                                                        <img class="img-fluid image-secondary" src="{% static 'img/product/22.jpg' %}" alt="img">
                                                                     </a>
                                                                     <div class="highlighted-informations">
                                                                         <div class="variant-links">
@@ -784,8 +784,8 @@
                                                             <div class="product-miniature js-product-miniature item-one first-item">
                                                                 <div class="thumbnail-container border">
                                                                     <a href="product-detail.html">
-                                                                        <img class="img-fluid image-cover" src="img/product/2.jpg" alt="img">
-                                                                        <img class="img-fluid image-secondary" src="img/product/11.jpg" alt="img">
+                                                                        <img class="img-fluid image-cover" src="{% static 'img/product/2.jpg' %}" alt="img">
+                                                                        <img class="img-fluid image-secondary" src="{% static 'img/product/11.jpg' %}" alt="img">
                                                                     </a>
                                                                     <div class="highlighted-informations">
                                                                         <div class="variant-links">
@@ -835,8 +835,8 @@
                                                             <div class="product-miniature js-product-miniature item-one first-item">
                                                                 <div class="thumbnail-container border">
                                                                     <a href="product-detail.html">
-                                                                        <img class="img-fluid image-cover" src="img/product/3.jpg" alt="img">
-                                                                        <img class="img-fluid image-secondary" src="img/product/14.jpg" alt="img">
+                                                                        <img class="img-fluid image-cover" src="{% static 'img/product/3.jpg' %}" alt="img">
+                                                                        <img class="img-fluid image-secondary" src="{% static 'img/product/14.jpg' %}" alt="img">
                                                                     </a>
                                                                     <div class="highlighted-informations">
                                                                         <div class="variant-links">
