--- a/templates/404.html
+++ b/templates/404.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 {% block title %}Page not Found{% endblock %}
 {% block body_id %}page-404{% endblock %}
-{% block content %}
+{% block contend %}
    <div class="main-content">
         <div id="wrapper-site">
             <div id="content-wrapper">
@@ -12,23 +12,21 @@
                         <div class="row center">
                             <div class="content-404 col-lg-6 col-sm-6 text-center">
                                 <div class="image">
-                                    <img class="img-fluid" src="{% static 'img/other/image-404.png'%}
-" alt="Image 404">
+                                    <img class="img-fluid" src="{% static 'img/other/image-404.png'%}" alt="Image 404">
                                 </div>
                                 <h2 class="h4">We're sorry — something has gone wrong on our end.</h2>
                                 <div class="info">
                                     <p>If difficulties persist, please contact the System Administrator of this site and report
                                         the error below.</p>
                                 </div>
-                                <a class="btn btn-default" href="index-2.html">
+                                <a class="btn btn-default" href="{% url 'pages:home' %}">
                                     <i class="fa fa-home" aria-hidden="true"></i>
                                     <span>Back to homepage</span>
                                 </a>
                             </div>
                             <div class="content-right-404 col-lg-6 col-sm-6 text-center">
                                 <a href="#">
-                                    <img class="img-fluid" src="{% static 'img/other/background.jpg'%}
-" alt="image 404 right">
+                                    <img class="img-fluid" src="{% static 'img/other/background.jpg'%}" alt="image 404 right">
                                 </a>
                             </div>
                         </div>
