--- a/templates/blog-detail.html
+++ b/templates/blog-detail.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 {% block title %}Blog Detail{% endblock %}
 {% block body_id %}blog-detail{% endblock %}
-{% block content %}
+{% block contend %}
    <div class="main-content">
         <div id="wrapper-site">
             <div id="content-wrapper">
@@ -291,8 +291,7 @@
                                     <div class="col-sm-8 col-lg-9 col-md-9 flex-xs-first main-blogs">
                                         <h3>Rutrum Nonvopxe Sapiente Delectus Aut Bonbde</h3>
                                         <div class="hover-after">
-                                            <img src="{% static 'img/blog/detail.jpg'%}
-" alt="img" class="img-fluid">
+                                            <img src="{% static 'img/blog/detail.jpg'%}" alt="img" class="img-fluid">
                                         </div>
                                         <div class="late-item">
                                             <p>
@@ -320,14 +319,12 @@
                                                     <div class="row">
                                                         <div class="col-lg-6 col-md-6 p-left">
                                                             <div class="effect">
-                                                                <img class="img-fluid" src="{% static 'img/blog/3.jpg'%}
-" alt="banner-1" title="banner-1">
+                                                                <img class="img-fluid" src="{% static 'img/blog/3.jpg'%}" alt="banner-1" title="banner-1">
                                                             </div>
                                                         </div>
                                                         <div class="col-lg-6 col-md-6 p-right">
                                                             <div class="effect">
-                                                                <img class="img-fluid" src="{% static 'img/blog/2.jpg'%}
-" alt="banner-2" title="banner-2">
+                                                                <img class="img-fluid" src="{% static 'img/blog/2.jpg'%}" alt="banner-2" title="banner-2">
                                                             </div>
                                                         </div>
                                                     </div>
@@ -368,8 +365,7 @@
                                         </div>
 
                                         <div class="admin">
-                                            <img src="{% static 'img/blog/user.jpg'%}
-" alt="img" class="float-left right">
+                                            <img src="{% static 'img/blog/user.jpg'%}" alt="img" class="float-left right">
                                             <div class="info">
                                                 <p>
                                                     <a href="#">
@@ -391,8 +387,7 @@
                                                     <div class="col-md-4">
                                                         <div class="hover-after">
                                                             <a href="blog-detail.html">
-                                                                <img src="{% static 'img/blog/7.jpg'%}
-" alt="img" class="img-fluid">
+                                                                <img src="{% static 'img/blog/7.jpg'%}" alt="img" class="img-fluid">
                                                             </a>
                                                         </div>
                                                         <div class="late-item">
@@ -407,8 +402,7 @@
                                                     <div class="col-md-4">
                                                         <div class="hover-after">
                                                             <a href="blog-detail.html">
-                                                                <img src="{% static 'img/blog/8.jpg'%}
-" alt="img" class="img-fluid">
+                                                                <img src="{% static 'img/blog/8.jpg'%}" alt="img" class="img-fluid">
                                                             </a>
                                                         </div>
                                                         <div class="late-item">
@@ -423,8 +417,7 @@
                                                     <div class="col-md-4">
                                                         <div class="hover-after">
                                                             <a href="blog-detail.html">
-                                                                <img src="{% static 'img/blog/9.jpg'%}
-" alt="img" class="img-fluid">
+                                                                <img src="{% static 'img/blog/9.jpg'%}" alt="img" class="img-fluid">
                                                             </a>
                                                         </div>
                                                         <div class="late-item">
@@ -442,8 +435,7 @@
                                         <div class="reply late-item">
                                             <div class="blog-comment" id="blog-comment">
                                                 <h2 class="title-block">Comments</h2>
-                                                <img src="{% static 'img/blog/user1.jpg'%}
-" alt="img" class="float-left right">
+                                                <img src="{% static 'img/blog/user1.jpg'%}" alt="img" class="float-left right">
                                             </div>
                                             <div class="comment-content">
                                                 <p class="user-title">
@@ -461,8 +453,7 @@
                                             </div>
                                             <div class="blog-comment margin-right-comment">
                                                 <div class="avatar">
-                                                    <img src="{% static 'img/blog/user2.jpg'%}
-" alt="img" class="float-left">
+                                                    <img src="{% static 'img/blog/user2.jpg'%}" alt="img" class="float-left">
                                                 </div>
                                                 <div class="comment-content">
                                                     <p class="user-title">
@@ -482,8 +473,7 @@
                                             </div>
                                             <div class="blog-comment">
                                                 <div class="avatar">
-                                                    <img src="{% static 'img/blog/user1.jpg'%}
-" alt="img" class="float-left right">
+                                                    <img src="{% static 'img/blog/user1.jpg'%}" alt="img" class="float-left right">
                                                 </div>
                                                 <div class="comment-content">
                                                     <p class="user-title">
