--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -1,5 +1,6 @@
 {% load static %}
 {% load i18n %}
+
 <!DOCTYPE html>
 <!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
 <!--[if IE 9 ]><html class="ie ie9" lang="en"> <![endif]-->
@@ -8,17 +9,16 @@
 <html lang="en">
 
 
-<!-- contact11:09-->
+<!-- home307:34-->
 <head>
     <!-- Basic Page Needs -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title> {% block title %}{% endblock %}</title>
+    <title>{% block title %}{% endblock %}</title>
 
     <meta name="keywords" content="Furniture, Decor, Interior">
     <meta name="description" content="Furnitica - Minimalist Furniture HTML Template">
     <meta name="author" content="tivatheme">
-
 
     <!-- Mobile Meta -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -26,29 +26,33 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,600,700" rel="stylesheet">
 
-    <!-- Vendor CSS -->
+    <!-- libs CSS -->
     <link rel="stylesheet" href="{% static 'libs/bootstrap/css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'libs/font-awesome/css/font-awesome.min.css' %}">
-    <link rel="stylesheet" href="{% static 'libs/nivo-slider/css/nivo-slider.css' %}">
-    <link rel="stylesheet" href="{% static 'libs/nivo-slider/css/animate.css' %}">
-    <link rel="stylesheet" href="{% static 'libs/nivo-slider/css/style.css' %}">
-    <link rel="stylesheet" href="{% static 'libs/font-material/css/material-design-iconic-font.min.css' %}">
-    <link rel="stylesheet" href="{% static 'libs/slider-range/css/jslider.css' %}">
-    <link rel="stylesheet" href="{% static 'libs/owl-carousel/assets/owl.carousel.min.css' %}">
+    <link rel="stylesheet" href="{% static 'libs/font-awesome/css/font-awesome.min.css'%}">
+    <link rel="stylesheet" href="{% static 'libs/nivo-slider/css/nivo-slider.css'%}">
+    <link rel="stylesheet" href="{% static 'libs/nivo-slider/css/animate.css'%}">
+    <link rel="stylesheet" href="{% static 'libs/nivo-slider/css/style.css'%}">
+    <link rel="stylesheet" href="{% static 'libs/font-material/css/material-design-iconic-font.min.css'%}">
+    <link rel="stylesheet" href="{% static 'libs/slider-range/css/jslider.css'%}">
+    <link rel="stylesheet" href="{% static 'libs/owl-carousel/assets/owl.carousel.min.css'%}">
+    <link rel="stylesheet" href="{% static 'libs/slick-slider/css/slick.css'%}">
+    <link rel="stylesheet" href="{% static 'libs/slick-slider/css/slick-theme.css'%}">
 
     <!-- Template CSS -->
-    <link rel="stylesheet" type="text/css" href="{%  static 'css/style.css' %}">
-    <link rel="stylesheet" type="text/css" href="{%  static 'css/reponsive.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css ' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/reponsive.css'%}">
 </head>
 
-<body id=" {% block body_id %}{% endblock %}" class="blog">
+<body id="{% block body_id %}{% endblock %}" class="blog">
+
     {%  include 'layouts/header_base.html' %}
+   
 
     <!-- main content -->
-    {% block content %}{% endblock %}
-
+    {% block contend %}{% endblock %}
+	
     <!-- footer -->
-    {% include 'layouts/footer.html' %}
+    {%  include 'layouts/footer.html' %}
 
     <!-- back top top -->
     <div class="back-to-top">
@@ -57,7 +61,10 @@
         </a>
     </div>
 
-  {% include 'layouts/mobile_menyu.html' %}
+    <!-- menu mobie left -->
+
+    {%  include 'layouts/mobile_menyu.html' %}
+    
     <!-- Page Loader -->
     <div id="page-preloader">
         <div class="page-loading">
@@ -70,20 +77,21 @@
     </div>
 
     <!-- Vendor JS -->
-    <script src="{% static 'libs/jquery/jquery.min.js' %}"></script>
-    <script src="{% static 'libs/popper/popper.min.js' %}"></script>
-    <script src="{% static 'libs/bootstrap/js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'libs/nivo-slider/js/jquery.nivo.slider.js' %}"></script>
-    <script src="{% static 'libs/owl-carousel/owl.carousel.min.js' %}"></script>
-    <script src="{% static 'libs/slider-range/js/tmpl.js' %}"></script>
-    <script src="{% static 'libs/slider-range/js/jquery.dependClass-0.1.js' %}"></script>
-    <script src="{% static 'libs/slider-range/js/draggable-0.1.js' %}"></script>
-    <script src="{% static 'libs/slider-range/js/jquery.slider.js' %}"></script>
+    <script src="{% static 'libs/jquery/jquery.min.js'%}"></script>
+    <script src="{% static 'libs/popper/popper.min.js'%}"></script>
+    <script src="{% static 'libs/bootstrap/js/bootstrap.min.js'%}"></script>
+    <script src="{% static 'libs/nivo-slider/js/jquery.nivo.slider.js'%}"></script>
+    <script src="{% static 'libs/owl-carousel/owl.carousel.min.js'%}"></script>
+    <script src="{% static 'libs/slider-range/js/tmpl.js'%}"></script>
+    <script src="{% static 'libs/slider-range/js/jquery.dependClass-0.1.js'%}"></script>
+    <script src="{% static 'libs/slider-range/js/draggable-0.1.js'%}"></script>
+    <script src="{% static 'libs/slider-range/js/jquery.slider.js'%}"></script>
+    <script src="{% static 'libs/slick-slider/js/slick.min.js'%}"></script>
 
     <!-- Template JS -->
-    <script src="{% static 'js/theme.js' %}"></script>
+    <script src="{% static 'js/theme.js'%}"></script>
 </body>
 
 
-<!-- contact11:10-->
+<!-- home308:14-->
 </html>
