create add product

--- a/templates/product-checkout.html
+++ b/templates/product-checkout.html
@@ -190,19 +190,19 @@
                                             <ul>
                                                 <li>
                                                     <div class="block-reassurance-item">
-                                                        <img src="img/product/check1.png" alt="Security policy (edit with Customer reassurance module)">
+                                                        <img src="{% static 'img/product/check1.png'%}" alt="Security policy (edit with Customer reassurance module)">
                                                         <span>Security policy (edit with Customer reassurance module)</span>
                                                     </div>
                                                 </li>
                                                 <li>
                                                     <div class="block-reassurance-item">
-                                                        <img src="img/product/check2.png" alt="Delivery policy (edit with Customer reassurance module)">
+                                                        <img src="{% static 'img/product/check2.png'%}" alt="Delivery policy (edit with Customer reassurance module)">
                                                         <span>Delivery policy (edit with Customer reassurance module)</span>
                                                     </div>
                                                 </li>
                                                 <li>
                                                     <div class="block-reassurance-item">
-                                                        <img src="img/product/check3.png" alt="Return policy (edit with Customer reassurance module)">
+                                                        <img src="{% static 'img/product/check3.png'%}" alt="Return policy (edit with Customer reassurance module)">
                                                         <span>Return policy (edit with Customer reassurance module)</span>
                                                     </div>
                                                 </li>
